fix gap and adaptive for TenderList

--- a/src/entities/Tender/ui/list/_TenderList.module.scss
+++ b/src/entities/Tender/ui/list/_TenderList.module.scss
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: var(--white);
+    gap: 15px;
     border-radius: 15px;
     max-width: var(--max-width-2);
+    @media (width < 768px) {
+        gap: 0px;
+        background-color: var(--white);
+    }
 }
